2023-12-23  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-intro.el (find-templates-intro): rewrote the section "5.
	Debugging the meat".

	* eev-qrl.el: new file.

	* eev-intro.el (find-templates-intro): mention eev-qrl.el.

2023-12-22  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-kl-here.el: new file.
	(ee-find-einfo-link, ee-find-eintro-link, ee-kl-sexp-klin)
	(eeklin, eeklins): moved from "eev-kla.el" to "eev-kl-here.el".

	* eev-load.el (eev-kl-here): added a (require 'eev-kl-here).

2023-12-21  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (find-macports-links): new function.

	* eev-multiwindow.el (find-4eee, find-4EEE): new functions.

	* eev-intro.el (find-templates-intro): rewrote many sections.

2023-12-20  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-blinks.el (find-eaproposf, ee-eaproposf0): new functions.

	* eev-tlinks.el (ee-ffll-deftest): new function.
	(find-find-links-links-new): use `ee-ffll-deftest'.

2023-12-19  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-intro.el (find-show2-intro): added a section for Arch Linux.

	* eev-tlinks.el (find-pacman-links): new function.

	* eev-plinks.el (find-telegachat-msgc, ee-telegachat-msg0)
	(ee-telegachat-msgc): new functions.
	(find-telegachatm): new alias.

2023-12-18  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (find-homebrew-links): new function.
	(ee-find-telegachat-links): added several entries.

2023-12-17  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (show2-use, find-show2-use)
	(ee-show2-do-with-fname0, ee-show2-use): new functions.
	(code-show2, find-code-show2, ee-code-show2): deleted.

	* eev-intro.el (find-show2-intro): added more sections.

	* eev-videolinks.el (ee-all-cs-with-subs, code-lsubs)
	(find-code-lsubs, ee-code-lsubs, code-all-lsubs)
	(find-code-all-lsubs, ee-code-all-lsubs): new functions.

	* eev-tlinks.el (find-angg-es-links): added a definition for
	`find-anggfile'.

2023-12-16  Eduardo Ochs  <eduardoochs@gmail.com>
